# AqlMind

./: README.md  index.html  pyproject.toml  requirements.txt  streamlit_app.py  web_app.py
scrapling/: elements_storage.db
static/: script.js  style.css
