[project]
name = "AqlMind"
version = "0.1.0"
description = "AqlMind is an AI-powered web application that allows you to chat intelligently about the content of any website"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "browserforge>=1.2.3",
    "camoufox>=0.4.11",
    "click>=8.2.1",
    "cssselect>=1.3.0",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "langchain-google-genai>=2.1.5",
    "lxml>=5.4.0",
    "orjson>=3.10.18",
    "playwright>=1.52.0",
    "streamlit>=1.46.0",
    "tldextract>=5.3.0",
    "uvicorn>=0.34.3",
    "w3lib>=2.3.1",
]
